# KolibriOS-Cpp-Lib

./: .gitignore  .gitingore  .gitmodules  AutoInstall.bat  CMakeLists.txt  CONTRIBUTING.md  Makefile  Readme.md  SECURITY.md  branches guide.md  guide.md  include.cmake  install.bat  kolibrios.lnk  text.cpp  text.hpp  types.cpp
.github/workflows/: build.yml  static.yml
C_Layer/: C_Layer - Ярлык.lnk  README
C_Layer/ASM/: Makefile  loadboxlib.asm
C_Layer/INCLUDE/: INCLUDE - Ярлык.lnk  kolibri_checkbox.h  kolibri_colordialog.h  kolibri_colors.h  kolibri_debug.h  kolibri_editbox.h  kolibri_editor.h  kolibri_filebrowse.h  kolibri_gui.h  kolibri_gui_elements.h  kolibri_kmenu.h  kolibri_libimg.h  kolibri_menubar.h  kolibri_msgbox.h  kolibri_opendialog.h  kolibri_optionbox.h  kolibri_rasterworks.h  kolibri_statictext.h  kolibri_treelist.h
Docs/: Doxyfile  window.hpp.md
Docs/Ru/: UI.md
Docs/docbook/: _0dcode-example.xml  _draw_text-example.xml  _emulate_mouse-example.xml  _kolibri_lib_8hpp_source.xml  _u_i_2menu_8hpp_source.xml  _u_i_8hpp_source.xml  annotated.xml  background_8hpp_source.xml  base_8hpp_source.xml  button_8hpp_source.xml  checkbox_8hpp_source.xml  child_window_8hpp_source.xml  class_kolibri_lib_1_1_image_1_1img.xml  class_kolibri_lib_1_1_network_1_1_devices_1_1_net_device.xml  class_kolibri_lib_1_1_u_i_1_1_check_box.xml  class_kolibri_lib_1_1_u_i_1_1_form.xml  class_kolibri_lib_1_1_u_i_1_1_frame.xml  class_kolibri_lib_1_1_u_i_1_1_image_1_1img.xml  class_kolibri_lib_1_1_u_i_1_1_images_1_1_image.xml  class_kolibri_lib_1_1_u_i_1_1_images_1_1image.xml  class_kolibri_lib_1_1_u_i_1_1_images_1_1img.xml  class_kolibri_lib_1_1_u_i_1_1_menu.xml  class_kolibri_lib_1_1_u_i_1_1_u_i_element.xml  class_kolibri_lib_1_1_u_i_1_1buttons_1_1_button.xml  class_kolibri_lib_1_1_u_i_1_1buttons_1_1_empety_button.xml  class_kolibri_lib_1_1_u_i_1_1buttons_1_1_image_button.xml  class_kolibri_lib_1_1_u_i_1_1buttons_1_1_text_button.xml  class_kolibri_lib_1_1_u_i_1_1text_1_1_char.xml  class_kolibri_lib_1_1_u_i_1_1text_1_1_text.xml  class_kolibri_lib_1_1_u_i_1_1text_1_1_text_label.xml  class_kolibri_lib_1_1filesystem_1_1_path.xml  class_kolibri_lib_1_1graphic_1_1_image.xml  class_kolibri_lib_1_1window_1_1_window.xml  color_8hpp_source.xml  constants_8hpp_source.xml  filesystem_8hpp_source.xml  fonts_8hpp_source.xml  fontslist_8hpp_source.xml  form_8hpp_source.xml  frame_8hpp_source.xml  (+132 more)
Docs/html/: _0dcode-example.html  _draw_text-example.html  _emulate_mouse-example.html  _kolibri_lib_8hpp_source.html  _u_i_2menu_8hpp_source.html  _u_i_8hpp_source.html  annotated.html  annotated_dup.js  background_8hpp_source.html  base_8hpp_source.html  button_8hpp_source.html  checkbox_8hpp_source.html  child_window_8hpp_source.html  class_kolibri_lib_1_1_image_1_1img-members.html  class_kolibri_lib_1_1_image_1_1img.html  class_kolibri_lib_1_1_image_1_1img.js  class_kolibri_lib_1_1_network_1_1_devices_1_1_net_device-members.html  class_kolibri_lib_1_1_network_1_1_devices_1_1_net_device.html  class_kolibri_lib_1_1_network_1_1_devices_1_1_net_device.js  class_kolibri_lib_1_1_u_i_1_1_check_box-members.html  class_kolibri_lib_1_1_u_i_1_1_check_box.html  class_kolibri_lib_1_1_u_i_1_1_check_box.js  class_kolibri_lib_1_1_u_i_1_1_form-members.html  class_kolibri_lib_1_1_u_i_1_1_form.html  class_kolibri_lib_1_1_u_i_1_1_form.js  class_kolibri_lib_1_1_u_i_1_1_frame-members.html  class_kolibri_lib_1_1_u_i_1_1_frame.html  class_kolibri_lib_1_1_u_i_1_1_frame.js  class_kolibri_lib_1_1_u_i_1_1_image_1_1img-members.html  class_kolibri_lib_1_1_u_i_1_1_image_1_1img.html  class_kolibri_lib_1_1_u_i_1_1_image_1_1img.js  class_kolibri_lib_1_1_u_i_1_1_images_1_1_image-members.html  class_kolibri_lib_1_1_u_i_1_1_images_1_1_image.html  class_kolibri_lib_1_1_u_i_1_1_images_1_1_image.js  class_kolibri_lib_1_1_u_i_1_1_images_1_1image-members.html  class_kolibri_lib_1_1_u_i_1_1_images_1_1image.html  class_kolibri_lib_1_1_u_i_1_1_images_1_1image.js  class_kolibri_lib_1_1_u_i_1_1_images_1_1img-members.html  class_kolibri_lib_1_1_u_i_1_1_images_1_1img.html  class_kolibri_lib_1_1_u_i_1_1_images_1_1img.js  (+306 more)
Docs/latex/: _0dcode-example.tex  _draw_text-example.tex  _emulate_mouse-example.tex  _kolibri_lib_8hpp_source.tex  _u_i_2menu_8hpp_source.tex  _u_i_8hpp_source.tex  annotated.tex  background_8hpp_source.tex  base_8hpp_source.tex  button_8hpp_source.tex  checkbox_8hpp_source.tex  child_window_8hpp_source.tex  class_kolibri_lib_1_1_image_1_1img.tex  class_kolibri_lib_1_1_network_1_1_devices_1_1_net_device.tex  class_kolibri_lib_1_1_u_i_1_1_check_box.eps  class_kolibri_lib_1_1_u_i_1_1_check_box.tex  class_kolibri_lib_1_1_u_i_1_1_form.eps  class_kolibri_lib_1_1_u_i_1_1_form.tex  class_kolibri_lib_1_1_u_i_1_1_frame.eps  class_kolibri_lib_1_1_u_i_1_1_frame.tex  class_kolibri_lib_1_1_u_i_1_1_image_1_1img.eps  class_kolibri_lib_1_1_u_i_1_1_menu.eps  (+172 more)
cmake/: CMakeDetermineKOS32Compiler.cmake  CMakeKOS32gcc.cmake  CMakeLoadToolchainPath.cmake  CMakeTestKOS32Compiler.cmake  Doxygen.cmake  kolibriexe.cmake  setCompiler.cmake  toolchain.cmake
examples/: CMakeLists.txt  ExampleTextEditor.cpp  HelloWorld  HelloWorld.cpp  Makefile  Readme.md  buttons.cpp  checkboxExample.cpp  example.cpp  form.cpp  mousePosition.cpp  test  test.cpp
examples/CheckBox/: CMakeLists.txt  Checkbox.cpp
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
examples/MousePosition/: CMakeLists.txt  mousePosition.cpp
examples/ProgressBar/: CMakeLists.txt  ProgressBar.cpp
executables/: CMakeLists.txt  Makefile  messageBox.cpp
fonts/: Readme.md
include/: BindableEvent.hpp  KolibriLib.hpp  KolibriLibUI.hpp  Readme.md  UI.hpp  include_ksys.h  input.hpp  sysapi.hpp
installator/: setup.iss
scripts/: install.bat  install.sh
src/: Readme.md  UI.cpp  button.cpp  buttonsBase.cpp  char.cpp  checkbox.cpp  color.cpp  filesystem.cpp  font.cpp  fonts.cpp  form.cpp  frame.cpp  freetypefuncs.cpp  graphic.cpp  image.cpp  img.cpp  menu.cpp  network.cpp  os.cpp  screen.cpp  text.cpp  textBase.cpp  textlabel.cpp  thread.cpp  types.cpp  window.cpp
tests/: CMakeLists.txt  Readme.md
(+775 files in other folders)
